wordpress/answer/wordpress/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: tak01
  name: wordpress
  labels:
    app: openshift-lesson
spec:
  selector:
    matchLabels:
      app: wordpress
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      volumes:
      - name: wp-pv-volume
        persistentVolumeClaim:
          claimName: wp-pv-claim
      containers:
        - name: container
          image: >-
            image-registry.openshift-image-registry.svc:5000/tak01/wordpress:latest
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          volumeMounts:
            - name: wp-pv-volume
              mountPath: /var/www/html
